--- a/style.css
+++ b/style.css
@@ -1,3 +1,143 @@
 body {
-  background-color: red;
+  background-color: #e5e5e5;
+}
+
+.top-nav {
+  display: flex;
+  background: #fff;
+  height: 55px;
+  width: 375px;
+  max-width: 100%;
+  position: fixed;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: -1%;
+}
+
+.my-logo {
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  text-decoration: none;
+  color: #6070ff;
+  margin-left: -15%;
+}
+
+.my-logo:hover {
+  border: 2px solid #6070ff;
+}
+
+.Hamburger-icon {
+  height: 25px;
+  width: 25px;
+  align-self: flex-end;
+}
+
+.Hamburger-icon:hover {
+  border: 2px solid #6070ff;
+}
+
+/* ========Top-section-code======== */
+
+.top-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 375px;
+  max-width: 100%;
+  height: 668px;
+  background: url(./images/header-shapes\ mobile.png) #fff;
+  background-size: 100%;
+  background-repeat: no-repeat;
+  border-bottom-left-radius: 78px;
+}
+
+.top-sect-heading {
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  height: 150px;
+  margin-left: 24px;
+  margin-top: 30%;
+  text-align: justify;
+  align-self: flex-start;
+}
+
+.top-sect-paragraph {
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  margin-top: 0;
+  margin-left: 24px;
+  margin-right: 25px;
+  color: #344563;
+  text-align: justify;
+  align-self: flex-start;
+}
+
+.top-sect-connect {
+  align-self: flex-start;
+  margin-left: 24px;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  color: #7f8cff;
+  text-decoration: none;
+  margin-top: 0;
+}
+
+.top-sect-connect:hover {
+  border: 2px solid #6070ff;
+}
+
+.S-media-icons-ul {
+  display: flex;
+  width: 30%;
+  height: 30px;
+  align-self: flex-start;
+  margin-left: 24px;
+  list-style-type: none;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.S-media-icons-li {
+  margin-left: -35%;
+}
+
+.S-media-icons-li:hover {
+  border: 2px solid #6070ff;
+  background: #7f8cff;
+}
+
+/* ========Work-Section======== */
+.work-section-container {
+  display: flex;
+  flex-direction: column;
+  width: 375px;
+}
+
+.work-sect-2,
+.work-sect-3,
+.work-sect-4,
+.work-sect-1 {
+  display: flex;
+  width: 327px;
+  height: 552px;
+  background: #fff;
+  border: 1px solid #dfe1e6;
+  border-radius: 16px;
+  padding: 16px;
+  align-self: center;
+  margin-top: 114px;
+  justify-content: center;
+}
+
+.work-sect-image {
+  width: 295px;
+  height: 220px;
 }
