Edit style.css file to fix linters Errors

--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ body {
 .top-sect-connect {
   align-self: flex-start;
   margin-left: 24px;
-  font-family: "Poppins";
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
