Edit style.css file to correct linters errors

--- a/style.css
+++ b/style.css
@@ -175,7 +175,7 @@ body {
 
 .label-2015,
 .back-end-dev-label {
-  font-family: "Poppins" sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 600;
   font-size: 13px;
