--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ body {
   font-size: 40px;
   height: 150px;
   margin-left: 24px;
-  margin-top: 30%;
+  margin-top: 36%;
   text-align: justify;
   align-self: flex-start;
 }
@@ -351,13 +351,23 @@ body {
   border: 2px solid #396df2;
 }
 
-.frameworks-skills,
 .languages-container {
   margin-top: 10%;
   width: 80%;
   margin-left: 20px;
   display: flex;
   justify-content: space-between;
+}
+
+.frameworks-skills {
+  width: 80%;
+  margin-left: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.frameworks-cont {
+  margin-top: 40%;
 }
 
 .frameworks-label,
@@ -368,6 +378,12 @@ body {
   font-size: 20px;
   line-height: 24px;
   color: #000;
+}
+
+.languages-label:hover,
+.frameworks-label:hover,
+.skills-label:hover {
+  color: #396df2;
 }
 
 #skills,
@@ -508,4 +524,268 @@ body {
   background: #396df2;
   color: #fff;
   border: 2px solid #396df2;
+}
+
+.About-Myself-lang-icons-desktop,
+.work-sect-text-desktop,
+.desktop-nav-links {
+  display: none;
+}
+
+/* ========Media Queries Desktop Version Design======== */
+@media only screen and (min-width: 768px) {
+  /* ========Navbar======== */
+  .top-nav {
+    width: 100%;
+  }
+
+  .desktop-nav-links {
+    list-style-type: none;
+    display: flex;
+    width: 16%;
+    justify-content: space-between;
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 20px;
+    text-align: center;
+    color: #344563;
+  }
+
+  a {
+    text-decoration: none;
+  }
+
+  /* .desktop-navlink-a:hover {
+    border: 2px solid #6070ff;
+  } */
+
+  .Hamburger-icon {
+    display: none;
+  }
+
+  .my-logo {
+    margin-left: 1%;
+  }
+
+  /* ========Top-Section======== */
+
+  .top-section {
+    width: 100%;
+    background-image: url(./images/Desktop-background.png);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .top-sect-heading {
+    margin-top: 0;
+    margin-left: 20%;
+    height: 15%;
+  }
+
+  .top-heading-br2 {
+    display: none;
+  }
+
+  .top-sect-paragraph {
+    width: 60%;
+    margin-left: 20%;
+    margin-top: -1%;
+  }
+
+  .top-sect-connect {
+    margin-left: 20%;
+  }
+
+  .S-media-icons-ul {
+    margin-left: 20%;
+    width: 8%;
+  }
+  /* ========Work-section======== */
+  .work-section-container {
+    width: 100%;
+    align-items: center;
+  }
+  .work-sect-2,
+  .work-sect-3,
+  .work-sect-4,
+  .work-sect-1 {
+    height: 496px;
+    width: 1156px;
+    border-radius: 24px;
+    border: 1px solid #dfe1e6;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .work-sect-image {
+    width: 544px;
+    height: 448px;
+    align-self: flex-start;
+    margin-top: 1.5%;
+  }
+
+  .About-Myself-btn {
+    width: 45%;
+    margin-left: 2%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .tonic3,
+  .tonic1 {
+    margin-left: 3%;
+    margin-top: 8%;
+  }
+
+  .canopy-ul {
+    width: 40%;
+    margin-left: 3.5%;
+  }
+
+  .language-btns {
+    width: 40%;
+  }
+
+  .work-btn-a {
+    margin-top: 10%;
+  }
+
+  .work-sect-image4,
+  .work-sect-image2 {
+    order: 2;
+  }
+
+  .multi-post-br {
+    display: none;
+  }
+
+  .work-sect-title4,
+  .work-sect-title2 {
+    margin-left: 3.5%;
+    margin-top: 10%;
+  }
+
+  /* ========About-Myself-section======== */
+
+  .About-Myself-container {
+    width: 100%;
+    height: 924px;
+    display: flex;
+    flex-direction: row;
+  }
+
+  .About-myself-text {
+    width: 35%;
+    height: 45%;
+    margin-left: 10%;
+  }
+
+  .lang-frameworks-skills-container {
+    width: 40%;
+    height: 50%;
+    margin-top: 5%;
+  }
+
+  .About-Myself-lang-icons {
+    display: none;
+  }
+
+  .About-Myself-lang-icons-desktop {
+    display: flex;
+    width: 65%;
+    justify-content: space-between;
+    margin-top: 5%;
+    margin-left: 3%;
+  }
+
+  .lang-icons-desktop:hover {
+    border: 2px solid #6070ff;
+    border-radius: 8px;
+  }
+
+  .frameworks-skills {
+    margin-top: 4%;
+  }
+
+  .connect2-desktop {
+    margin-left: 5%;
+  }
+
+  .S-media-icons-ul-desktop {
+    width: 25%;
+    margin-left: 5.5%;
+  }
+
+  .twitter-icon-li {
+    order: 4;
+  }
+
+  .linked-icon-li {
+    order: 2;
+  }
+
+  .email-icon-li {
+    order: 5;
+  }
+
+  .GitHub-icon {
+    order: 1;
+  }
+
+  .Two-fin-icon-li {
+    order: 3;
+  }
+
+  .get-resume-desktop {
+    width: 30%;
+    margin-left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  /* ========Contact-me-section======== */
+
+  .contact-me-container {
+    width: 100%;
+    height: 846px;
+    background-image: url(./images/contact\ form\ background.png);
+    background-color: #6070ff;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    margin-top: -15%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .contact-me-h2 {
+    margin-top: 0;
+  }
+
+  .contact-me-paragraph {
+    margin-top: -1%;
+    width: 35%;
+  }
+
+  .name,
+  .email {
+    width: 447px;
+    height: 48px;
+  }
+
+  .text_area {
+    width: 447px;
+    height: 170px;
+  }
+
+  .form-submit-btn {
+    margin-left: 35%;
+  }
 }
