--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@ body {
   width: 375px;
   max-width: 100%;
   position: fixed;
-  justify-content: space-around;
+  /* justify-content: space-around; */
+  justify-content: space-evenly;
   align-items: center;
   margin-top: -1%;
 }
@@ -31,7 +32,8 @@ body {
 .Hamburger-icon {
   height: 25px;
   width: 25px;
-  align-self: flex-end;
+  margin-left: 350%;
+  /* align-self: flex-end; */
 }
 
 .Hamburger-icon:hover {
